# vcam-proxy

./: Cargo.toml  README.md
docs/: IMPLEMENTATION_PLAN_LINUX.md  VIRTUAL_CAMERA_REPORT.md
src/: capture.rs  cli_cmds.rs  config.rs  controller.rs  convert.rs  frame.rs  image_source.rs  lib.rs  logging.rs  main.rs  messages.rs  pipeline.rs  settings.rs  shutdown.rs  tray.rs  ui.rs
src/sink/: mod.rs  null.rs  v4l2loop.rs  winpipe.rs
src/sink/v4l2loop/: active.rs  discovery.rs  distro.rs  mod.rs  module.rs  module_ops.rs  multi_sink.rs  permissions.rs  scaling.rs  sink.rs  usage.rs
tests/: pixel_integrity.rs
